bk_ida/gccida/c2/build_asm_stmt
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/c-typeck.c:7375:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/c-typeck.c:7376:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/c-typeck.c:7383:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/c-typeck.c:7417:20: error: expected expression
v14 = ( tree_node *)low; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/c-typeck.c:7417:9: error: use of undeclared identifier 'tree_node'
v14 = ( tree_node *)low; 
        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_asm_stmt/src/obj/c-typeck.o] Error 1
